# homework_30

./: .flake8  pyproject.toml
config/: settings.py  urls.py
education/: models.py  serializers.py  urls.py  views.py
education/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
